2002-06-28  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompile.h: modified the macro TclEmitPush to not
	call its first argument repeatedly or pass it to other macros,
	[Bug 575194] reported by Peter Spjuth.

2002-06-28  Don Porter  <dgp@users.sourceforge.net>

	* docs/tcltest.n:	Doc revisions in progress.
	* library/tcltest/tcltest.tcl: Corrected -testdir default value.
	Was not reliable, and disagreed with docs!  Thanks to Hemang Lavana.
	[Bug 575150]

2002-06-28  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tclUnixThrd.c:	Renamed the Tcl_Platform* #defines to
	* unix/tclUnixPipe.c:	TclOS* because they are only used
	* unix/tclUnixFile.c:	internally.  Also stopped double-#def
	* unix/tclUnixFCmd.c:	of TclOSlstat [Bug #566099, post-rename]
	* unix/tclUnixChan.c:
	* unix/tclUnixPort.h:

	* doc/string.n: Improved documentation for [string last] along
	lines described in Bug #574799 so it indicates that the supplied
	index marks the end of the search space.

2002-06-27  Don Porter  <dgp@users.sourceforge.net>

	* doc/dde.n:		Work in progress updating the documentation
	* doc/http.n:		of the packages that come bundled with
	* doc/msgcat.n:		the Tcl source distribution, notably tcltest.
	* doc/registry.n:
	* doc/tcltest.n:

	* library/tcltest/tcltest.tcl:  Made sure that the TCLTEST_OPTIONS
	environment variablle configures tcltest at package load time.

2002-06-26  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/fileSystem.test: 
	* generic/tclIOUtil.c: fix to handling of empty paths ""
	which are not claimed by any filesystem (Bug #573758).
	Ensure good error messages are given in all cases.
	* tests/cmdAH.test:
	* unix/tclUnixFCmd.c: fix to bug reported as part of
	(Patch #566669).  Thanks to Taguchi, Takeshi for the report.
	
2002-06-26  Reinhard Max  <max@suse.de>

	* unix/tclUnixTime.c: Make [clock format] respect locale settings.
	* tests/clock.test:   Bug #565880. ***POTENTIAL INCOMPATIBILITY***
